# pfp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docs.yml  tests.yml
examples/: mphf.rs  pipfp.rs
src/: hash.rs  lib.rs  parse.rs
