[package]
name = "pfp"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.10"
rdst = { version = "0.20", optional = true }
epserde = { version = "0.8", optional = true }
epserde-derive = { version = "0.8", optional = true }
ptr_hash = { version = "1.0", features = ["epserde"], optional = true }
cacheline-ef = { version = "1.0", features = ["epserde"], optional = true }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
fastrand = "2.3"
niffler = "3.0"
rand = "0.9"
rustc-hash = "2.1"
seq_io = "0.3"

[features]
default = ["radix"]
radix = ["dep:rdst"]
epserde = ["dep:epserde", "dep:epserde-derive"]
mphf = ["radix", "epserde", "dep:ptr_hash", "dep:cacheline-ef"]

[profile.release]
opt-level = 3
lto = "fat"

[profile.dev]
opt-level = 1
lto = "thin"
